# mcp-servers

./: .gitattributes  .gitignore  README.md
chocolatey/: CHANGELOG.md  README.md  pylintrc  pyproject.toml
chocolatey/.github/: copilot-instructions.md
chocolatey/mcp_server_choco/: __init__.py  __main__.py  controller.py  server.py  service.py  util.py
chocolatey/tests/: test_controller.py  test_server.py  test_service.py
commons/: .pylintrc  CHANGELOG.md  README.md  logging.ini  pyproject.toml
commons/.github/: copilot-instructions.md
commons/mcp_commons/: __init__.py  config.py  controller.py  exception.py  executor.py  server.py  util.py
commons/tests/: test_config.py  test_controller.py  test_exception.py  test_executor.py  test_server.py  test_util.py
devkit/: .pylintrc  CHANGELOG.md  README.md  logging.ini  pyproject.toml
devkit/.github/: copilot-instructions.md
devkit/mcp_server_devkit/: __init__.py  __main__.py  controller.py  models.py  service.py
devkit/tests/: __init__.py  manual_decode_jwt.py  test_controller_decodebase64controller.py  test_controller_decodejwtcontroller.py  test_controller_encodebase64controller.py  test_controller_generateguidcontroller.py  test_controller_registry.py  test_controller_urlencodecontroller.py  test_models.py  test_service_decode_base64.py  test_service_decode_jwt.py  test_service_encode_base64.py  test_service_generateguid.py  test_service_url_encode.py
winget/: CHANGELOG.md  README.md  pyproject.toml
winget/.github/: copilot-instructions.md
winget/mcp_server_winget/: __init__.py  __main__.py  controller.py  server.py  service.py  util.py
winget/tests/: test_controller.py  test_server.py  test_service.py
