[project]
name = "mcp-commons"
version = "1.0.0"
description = "MCP Commons"
authors = [
    {name = "Ron Webb"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "tomlkit (>=0.13.2,<0.14.0)",
    "mcp (>=1.9.0,<2.0.0)",
    "pydantic (>=2.11.4,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
black = ">=25.1.0,<26.0.0"
pytest = ">=8.3.5,<9.0.0"
pytest-cov = "^6.1.1"
