[project]
name = "mcp-server-devkit"
version = "1.3.0"
description = "A simple development kit for developers."
authors = [
    {name = "Ron Webb",email = "ron@ronella.xyz"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "mcp (>=1.9.1,<2.0.0)",
    "mcp-commons @ ../commons",
    "pydantic (>=2.11.5,<3.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "cryptography (>=45.0.2,<46.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.3.7"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
